fix styling/layout bug on chrome canary
There were screen sizes (in the normal range of size
and aspect ratio) that cause the thermometer to appear
under the molecular view instead of on the right.

--- a/src/sass/lab/_application.sass
+++ b/src/sass/lab/_application.sass
@@ -23,6 +23,7 @@
   padding: 0.5em 1.0em
   position: relative
   display: inline-block
+  width: 100%
 
 .bottom
   padding: 0.1em 1.0em
